--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio"
+    "test": "wdio",
+    "test-login": "wdio --suite login" 
   },
   "author": "Rodrigo Fuentes",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "@badisi/wdio-harness": "^1.0.5",
     "@wdio/local-runner": "^7.25.2",
     "@wdio/mocha-framework": "^7.25.2",
+    "@wdio/selenium-standalone-service": "^7.25.1",
     "@wdio/spec-reporter": "^7.25.1",
     "chromedriver": "^106.0.1",
     "wdio-chromedriver-service": "^8.0.0",
